<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.samfonsec.lotr.view.main.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/frag_movies">
        <action
            android:id="@+id/action_home_to_characters"
            app:destination="@id/characters"
            app:launchSingleTop="true" />
    </fragment>

    <fragment
        android:id="@+id/favorite"
        android:name="com.samfonsec.lotr.view.main.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/frag_movies">
        <action
            android:id="@+id/action_favorite_to_characters"
            app:destination="@id/characters"
            app:launchSingleTop="true" />
    </fragment>

    <fragment
        android:id="@+id/security"
        android:name="com.samfonsec.lotr.view.main.security.SecurityFragment"
        android:label="@string/menu_security"
        tools:layout="@layout/frag_security" />

    <fragment
        android:id="@+id/characters"
        android:name="com.samfonsec.lotr.view.characters.list.CharactersFragments"
        android:label="@string/characters_toolbar_title"
        tools:layout="@layout/frag_characters">
        <action
            android:id="@+id/action_characters_to_quotes"
            app:destination="@id/quotes" />
    </fragment>

    <fragment
        android:id="@+id/quotes"
        android:name="com.samfonsec.lotr.view.characters.quotes.QuotesFragment"
        android:label="{title}"
        tools:layout="@layout/frag_quote">
        <argument
            android:name="title"
            app:argType="string" />
    </fragment>
</navigation>