<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:padding="@dimen/default_dimen">

    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/default_dimen"
        android:text="@string/label_create_pin"
        android:textAlignment="center"
        android:textColor="@color/primaryLightTextColor"
        android:textSize="@dimen/text_size_medium"
        app:drawableTopCompat="@drawable/ic_sauron_64"
        app:layout_constraintBottom_toTopOf="@id/btPin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbFingerPrint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_dimen"
        android:buttonTint="@color/secondaryLightColor"
        android:paddingHorizontal="@dimen/small_dimen"
        android:text="@string/enable_fingerprint"
        android:textColor="@color/secondaryLightColor"
        app:layout_constraintBottom_toTopOf="@id/btPin"
        app:layout_constraintTop_toBottomOf="@id/tvLabel"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btPin"
        style="@style/Widget.Lotr.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_create_pin"
        android:textColor="@color/primaryLightTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbFingerPrint"
        app:strokeColor="@color/primaryLightTextColor" />

</androidx.constraintlayout.widget.ConstraintLayout>